vlib/v/checker/tests/function_arg_redefinition.out
vlib/v/checker/tests/function_arg_redefinition.vv:1:17: error: redefinition of parameter `para1`
    1 | fn f(para1 int, para1 f32) int {
      |                 ~~~~~
    2 |     return para1
    3 | }
